Fix right margin on mobile (#74)

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -7,6 +7,7 @@
 }
 
 .app__header {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
